--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
                 </div>
                 <div class="bento-box sponsors">
                     <div class="sponsor-list">
-                        <div class="sponsor-item" href="https://eff.org/" target="_blank" rel="noopener">
+                        <a class="sponsor-item" href="https://eff.org/" target="_blank" rel="noopener">
                             <picture>
                                 <source srcset="/imgs/eff.webp" type="image/webp">
                                 <img src="/imgs/eff.png" alt="Electronic Frontier Foundation" class="sponsor-img" loading="lazy">
@@ -627,7 +627,7 @@
                                 <span class="sponsor-title">Electronic Frontier Foundation</span>
                                 <span class="sponsor-subtitle">Leader in digital rights advocacy.</span>
                             </span>
-                        </div>
+                        </a>
 
                         <a class="sponsor-item" href="https://hackclub.com/hcb" target="_blank" rel="noopener">
                             <picture>
@@ -651,16 +651,16 @@
                             </span>
                         </a>
 
-                        <div class="sponsor-item" href="https://bugcrowd.com/" target="_blank" rel="noopener">
-                            <picture>
-                                <source srcset="/imgs/bugcrowd.webp" type="image/webp">
-                                <img src="/imgs/bugcrowd.png" alt="Bugcrowd" class="sponsor-img" loading="lazy">
-                            </picture>
-                            <span class="sponsor-name">
-                                <span class="sponsor-title">Bugcrowd</span>
-                                <span class="sponsor-subtitle">Leading crowdsourced security platform.</span>
-                            </span>
-                    </div>
+                    <a class="sponsor-item" href="https://bugcrowd.com/" target="_blank" rel="noopener">
+                        <picture>
+                            <source srcset="/imgs/bugcrowd.webp" type="image/webp">
+                            <img src="/imgs/bugcrowd.png" alt="Bugcrowd" class="sponsor-img" loading="lazy">
+                        </picture>
+                        <span class="sponsor-name">
+                            <span class="sponsor-title">Bugcrowd</span>
+                            <span class="sponsor-subtitle">Leading crowdsourced security platform.</span>
+                        </span>
+                    </a>
                 </div>
             </section>
         </main>
