Enhance UI with animated backgrounds and effects
Introduces animated grid backgrounds and particle effects across all pages, updates color schemes and gradients, and adds interactive UI enhancements such as custom cursor glow, ripple effects, and improved modal transitions. Updates project statuses, statistics, and meta tags for SEO. Refactors and expands script.js to modularize features, improve real-time updates, and add new visual and interactive effects for a more modern and engaging user experience.

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="author" content="WRAVEN">
     <title>WRAVEN - WMU Cybersecurity</title>
     <meta name="description" content="WRAVEN is Western Michigan University's premier cybersecurity organization. Join WMU's leading cybersecurity club for CTF competitions, threat research, and hands-on security training at Western Michigan University.">
-    <meta name="keywords" content="WRAVEN, WMU cybersecurity, Western Michigan University cybersecurity, WMU, cybersecurity club WMU, WMU hacking, CTF WMU, cybersecurity research WMU, Western Michigan University security, WMU computer security, cybersecurity organization WMU, WMU student organizations">
+    <meta name="keywords" content="WRAVEN, WMU cybersecurity, Western Michigan University cybersecurity, WMU, cybersecurity club WMU, WMU hacking, CTF WMU, cybersecurity research WMU, Western Michigan University security, WMU computer security, cybersecurity organization WMU, WMU student organizations, Hackerspace, RSO, WMU RSO, Cybersecurity Club">
     <meta name="robots" content="index, follow">
     <meta name="language" content="en">
     
     <!-- Open Graph -->
     <meta property="og:title" content="WRAVEN - WMU Cybersecurity | Western Michigan University's Premier Cybersecurity Organization">
-    <meta property="og:description" content="WRAVEN is Western Michigan University's premier cybersecurity organization. Join WMU's leading cybersecurity club for CTF competitions, threat research, and hands-on security training at Western Michigan University.">
+    <meta property="og:description" content="WRAVEN is Western Michigan University's premier cybersecurity organization. Join WMU's leading cybersecurity club for CTF competitions, threat research, and hands-on security training.">
     <meta property="og:image" content="https://wraven.org/imgs/og-image.png">
     <meta property="og:url" content="https://wraven.org">
     <meta property="og:type" content="website">
@@ -234,7 +234,7 @@
                 <div class="hero-content">
                     <div class="hero-text">
                         <h2 class="hero-title">Western Michigan University's Premier Cybersecurity Organization</h2>
-                        <p class="hero-description">Join WRAVEN for cutting-edge threat research, hacking, CTF competitions, and hands-on cybersecurity training. Be part of the next generation of cyber experts.</p>
+                        <p class="hero-description">Join WRAVEN for cutting-edge threat research, ethical hacking, CTF competitions, & hands-on cybersecurity training. Be part of the next generation of cyber experts.</p>
                         <div class="hero-actions">
                             <a href="https://discord.gg/uYkvSU8DHy" target="_blank" class="hero-btn primary">
                                 <span class="btn-icon">💬</span>
@@ -242,7 +242,7 @@
                             </a>
                             <a href="https://experiencewmu.wmich.edu/organization/wraven" target="_blank" class="hero-btn secondary">
                                 <span class="btn-icon">🎓</span>
-                                Attend a Meeting
+                                Get Involved
                             </a>
                         </div>
                     </div>
@@ -430,22 +430,22 @@
                         <div class="project-description">Salt Typhoon re-analysis due to CISA & NSA guidance</div>
                         <div class="project-progress">
                             <div class="progress-bar">
-                                <div class="progress-fill" style="width: 72%"></div>
+                                <div class="progress-fill" style="width: 95%"></div>
                             </div>
-                            <span class="progress-text">72%</span>
+                            <span class="progress-text">95%</span>
                         </div>
                     </div>
                     <div class="project-card">
                         <div class="project-header">
                             <div class="project-name">HORIZON</div>
-                            <div class="project-status status-planning">PLANNING</div>
+                            <div class="project-status status-testing">TESTING</div>
                         </div>
                         <div class="project-description">Student run security operations center</div>
                         <div class="project-progress">
                             <div class="progress-bar">
-                                <div class="progress-fill" style="width: 25%"></div>
+                                <div class="progress-fill" style="width: 80%"></div>
                             </div>
-                            <span class="progress-text">25%</span>
+                            <span class="progress-text">80%</span>
                         </div>
                     </div>
                     <div class="project-card">
@@ -509,7 +509,7 @@
                     </div>
                     <div class="ctf-stats">
                         <div class="stat-item">
-                            <div class="stat-value">8</div>
+                            <div class="stat-value">11</div>
                             <div class="stat-label">Recent Events</div>
                         </div>
                         <div class="stat-item">
@@ -538,7 +538,7 @@
                     <button class="tool-btn">
                         <div class="tool-icon">🛡️</div>
                         <div class="tool-name">HORIZON</div>
-                        <div class="tool-desc">Under development</div>
+                        <div class="tool-desc">Testing</div>
                     </button>
                     <button class="tool-btn">
                         <div class="tool-icon">🔍</div>
@@ -688,7 +688,7 @@
                         <div class="footer-stat">
                             <div class="footer-stat-label">Last Update</div>
                             <div class="footer-stat-value">
-                                <code>Aug 20 2025 15:42 EST</code>
+                                <code>Sep 30 2025 16:42 EST</code>
                             </div>
                         </div>
                     </div>
