--- a/redirect/index.html
+++ b/redirect/index.html
@@ -40,24 +40,35 @@
             overflow: hidden;
         }
 
-        /* Animated background */
+        /* Animated grid background */
         body::before {
             content: '';
             position: fixed;
             top: 0;
             left: 0;
-            width: 100%;
-            height: 100%;
-            background: 
-                radial-gradient(circle at 20% 20%, rgba(30, 144, 255, 0.1) 0%, transparent 50%),
-                radial-gradient(circle at 80% 80%, rgba(138, 43, 226, 0.08) 0%, transparent 50%);
-            animation: backgroundShift 8s ease-in-out infinite;
+            width: 100vw;
+            height: 100vh;
+            background-image: 
+                radial-gradient(circle at 20% 30%, rgba(30, 144, 255, 0.06) 0%, transparent 40%),
+                radial-gradient(circle at 80% 70%, rgba(138, 43, 226, 0.05) 0%, transparent 40%),
+                linear-gradient(rgba(30, 144, 255, 0.02) 1px, transparent 1px),
+                linear-gradient(90deg, rgba(30, 144, 255, 0.02) 1px, transparent 1px);
+            background-size: 100% 100%, 100% 100%, 40px 40px, 40px 40px;
+            background-position: 0 0, 0 0, 0 0, 0 0;
+            pointer-events: none;
             z-index: -1;
+            animation: gridFloat 20s ease-in-out infinite;
         }
 
-        @keyframes backgroundShift {
-            0%, 100% { opacity: 1; transform: rotate(0deg); }
-            50% { opacity: 0.8; transform: rotate(1deg); }
+        @keyframes gridFloat {
+            0%, 100% {
+                opacity: 1;
+                transform: translateY(0) scale(1);
+            }
+            50% {
+                opacity: 0.85;
+                transform: translateY(-10px) scale(1.01);
+            }
         }
 
         .redirect-container {
