Improve UI colors and sponsor button styling
Updated text color variables for better contrast and readability, enhanced the sponsor interest button with a gradient background, animation, and improved padding, and made several responsive layout adjustments. Also changed 'Live updates…' to 'Online' in the threat feed and updated the script source path in index.html.

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                         <h2>Threat Overview</h2>
                         <div class="feed-status" role="status" aria-label="Threat feed status">
                             <span class="status-dot status-live"></span>
-                            Live updates…
+                            Online
                         </div>
                     </div>
                     <div class="threat-feed" role="feed" aria-label="Live threat intelligence feed">
@@ -836,6 +836,6 @@
     </div>
 
     <!-- Load JavaScript at the end for better performance -->
-    <script src="script.js" defer></script>
+    <script src="/script.js"></script>
 </body>
 </html>
