Improve footer layout and user IP display handling
Enhanced footer styles for better responsiveness and layout by adding width and min-width properties. Updated script.js to handle missing user IP element, set fetch timeouts, and display 'Privacy Protected' instead of 'Unavailable' or 'Error' when IP cannot be retrieved. Fixed minor HTML structure issue in index.html.

--- a/index.html
+++ b/index.html
@@ -728,6 +728,7 @@
                         </span>
                     </a>
                 </div>
+                </div>
             </section>
         </main>
 
