--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
     <meta name="msapplication-TileImage" content="/imgs/icon-192x192.png">
     
     <!-- Preload critical resources -->
-    <link rel="preload" href="/styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="/styles.css"></noscript>
+    <link rel="stylesheet" href="/styles.css">
     <link rel="preload" href="/script.js" as="script">
     
     <!-- Fonts with display=swap for faster rendering -->
@@ -727,7 +726,6 @@
                             <span class="sponsor-subtitle">Leading crowdsourced security platform.</span>
                         </span>
                     </a>
-                </div>
                 </div>
             </section>
         </main>
