Simplify threat tags and update threat content
Refined threat tags for clarity by shortening technique, malware, and sector labels. Updated the Datzbro threat item to include content and simplified its tags. These changes improve readability and consistency in the threat section.

--- a/index.html
+++ b/index.html
@@ -369,16 +369,14 @@
                             <div class="threat-footer">
                                 <div class="threat-tags">
                                     <span class="tag tag-apt">Phantom Taurus</span>
-                                    <span class="tag tag-technique">Fileless backdoor / in-memory execution</span>
-                                    <span class="tag tag-malware">IIServerCore / NET-STAR</span>
-                                    <span class="tag tag-sector">Government / Telecom</span>
+                                    <span class="tag tag-technique">Backdoor</span>
+                                    <span class="tag tag-malware">NET-STAR</span>
+                                    <span class="tag tag-sector">Government</span>
                                 </div>
                                 <div class="threat-time">Sep 30</div>
                             </div>
                         </div>
                     </div>
-
-                </div>
 
                     <!-- New: VMware vulnerability patch wave -->
                     <div class="threat-item">
@@ -388,9 +386,9 @@
                             <div class="threat-meta">Six vulnerabilities include privilege escalation, cross-VM access, SMTP injection in vCenter</div>
                             <div class="threat-footer">
                                 <div class="threat-tags">
-                                    <span class="tag tag-cve">CVE-2025-41244 / CVE-2025-41246 / CVE-2025-41250</span>
-                                    <span class="tag tag-technique">PrivEsc / Cross-VM Attack / Injection</span>
-                                    <span class="tag tag-sector">Virtualization / Cloud</span>
+                                    <span class="tag tag-cve">CVE-2025-41244</span>
+                                    <span class="tag tag-technique">PrivEsc VM</span>
+                                    <span class="tag tag-sector">Virtualization</span>
                                 </div>
                                 <div class="threat-time">Sep 29</div>
                             </div>
@@ -400,20 +398,19 @@
                     <!-- New: Datzbro Android trojan targeting elderly -->
                     <div class="threat-item">
                         <div class="threat-indicator medium"></div>
-                        <div class="threat-content"></div>
+                        <div class="threat-content">
                             <div class="threat-title">New Android trojan “Datzbro” scamming elders via AI-generated events</div>
                             <div class="threat-meta">Trojan tricks victims with Facebook travel events, enables device takeover & banking fraud</div>
                             <div class="threat-footer">
                                 <div class="threat-tags">
                                     <span class="tag tag-malware">Datzbro</span>
-                                    <span class="tag tag-technique">Device Takeover / Fraud</span>
-                                    <span class="tag tag-ioc">Facebook AI lure</span>
+                                    <span class="tag tag-technique">Fraud</span>
+                                    <span class="tag tag-ioc">AI lure</span>
                                 </div>
                                 <div class="threat-time">Sep 30</div>
                             </div>
                         </div>
                     </div>
-
                 </div>
             </section>
 
