--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
                             <div class="project-name">HORIZON</div>
                             <div class="project-status status-testing">TESTING</div>
                         </div>
-                        <div class="project-description">Student run security operations center</div>
+                        <div class="project-description">Student run security operations center, based on SecurityOnion</div>
                         <div class="project-progress">
                             <div class="progress-bar">
                                 <div class="progress-fill" style="width: 80%"></div>
@@ -479,7 +479,7 @@
             <!-- CTF Operations -->
             <section class="grid-item ctf-operations">
                 <div class="section-header">
-                    <h2>WMU CTF Team: ECX Inc.</h2>
+                    <h2>CTF Team: ECX Inc.</h2>
                 </div>
                 <div class="ctf-content">
                     <div class="team-info-section">
@@ -552,7 +552,7 @@
             <!-- Intel Tools -->
             <section class="grid-item intel-tools">
                 <div class="section-header">
-                    <h2>WRAVEN Public Tools</h2>
+                    <h2>Public Tools</h2>
                 </div>
                 <div class="tools-grid">
                     <a href="https://public.wraven.org" target="_blank" class="tool-btn">
@@ -574,7 +574,7 @@
                             </svg>
                         </div>
                         <div class="tool-name">HORIZON</div>
-                        <div class="tool-desc">Testing</div>
+                        <div class="tool-desc">Student Security Operations Center</div>
                     </button>
                     <button class="tool-btn">
                         <div class="tool-icon">
