--- a/index.html
+++ b/index.html
@@ -750,7 +750,7 @@
                         <div class="footer-stat">
                             <div class="footer-stat-label">Last Update</div>
                             <div class="footer-stat-value">
-                                <code>Sep 30 2025 16:42 EST</code>
+                                <code>WMU{not that easy...}</code>
                             </div>
                         </div>
                     </div>
