--- a/index.html
+++ b/index.html
@@ -368,6 +368,7 @@
                             <div class="threat-meta">Theat actor Vanilla Tempest uses over 200 Microsoft Certificates to fraudulently sign malcicious binaries in ransomware attacks</div>
                             <div class="threat-footer">
                                 <div class="threat-tags">
+                                    <span class="tag tag-apt">Vanilla Tempest</span>
                                     <span class="tag tag-technique">Backdoor</span>
                                     <span class="tag tag-technique">Fraud</span>
                                 </div>
