--- a/index.html
+++ b/index.html
@@ -360,52 +360,51 @@
                 </div>
                 <div class="threat-feed" role="feed" aria-label="Live threat intelligence feed">
 
-                    <!-- Microsoft Revokes 200 Fradulent Certificats -->
+                    <!-- OpenAI New Browser allows attackers to steal personal data -->
                     <div class="threat-item">
                         <div class="threat-indicator low"></div>
                         <div class="threat-content">
-                            <div class="threat-title">Microsoft Revokes Fraudulant Certificates Used in Rhysida Ransomeware Campaign</div>
-                            <div class="threat-meta">Theat actor Vanilla Tempest uses over 200 Microsoft Certificates to fraudulently sign malcicious binaries in ransomware attacks</div>
+                            <div class="threat-title">OpenAi Newly Released Atlas Browser Allows Attackers to Steal Personal Data</div>
+                            <div class="threat-meta">Theat Actors are using OpenAi's new Atlas Browser to inject malicious isntructions to collect personal data across devicesm sessions, and browsers </div>
                             <div class="threat-footer">
                                 <div class="threat-tags">
-                                    <span class="tag tag-apt">Vanilla Tempest</span>
-                                    <span class="tag tag-technique">Backdoor</span>
-                                    <span class="tag tag-technique">Fraud</span>
+                                    <span class="tag tag-technique">CSRF</span>
+                                    <span class="tag tag-exploit">Exploitation</span>
                                 </div>
-                                <div class="threat-time">Oct 17</div>
+                                <div class="threat-time">Oct 27</div>
                             </div>
                         </div>
                     </div>
                     
-                    <!-- New: Europol Takes Down SIM Farm Network -->
+                    <!-- Botnot has record breaking DDoS attacks -->
                     <div class="threat-item">
                         <div class="threat-indicator medium"></div>
                         <div class="threat-content">
-                            <div class="threat-title">Operation SIMCARTEL: Europol Takes Down SIM Farm Network</div>
-                            <div class="threat-meta">Europol seizes over 40,000 active SIM cards along with five servers that have been powering 49 million fake accounts worldwide</div>
+                            <div class="threat-title">A New TurboMirai-Class Botnet 'Aisuru' Has Record Breaking DDoS Attacks That Exceed Over 20 Tbps</div>
+                            <div class="threat-meta">New Botnet 'Airsuru' operates as a DDoS-for-hire service that has been launching massive attacks however they have not been able to spoof traffic which enables defenders to identify and clean up compromised devices</div>
                             <div class="threat-footer">
                                 <div class="threat-tags">
-                                    <span class="tag tag-sector">Government</span>
-                                    <span class="tag tag-phishing">Phishing</span>
-                                    <span class="tag tag-technique">Fraud</span>
+                                    <span class="tag tag-technique">DDoS</span>
+                                    <span class="tag tag-malware">Botnet</span>
                                 </div>
-                                <div class="threat-time">Oct 17</div>
+                                <div class="threat-time">Oct 28</div>
                             </div>
                         </div>
                     </div>
                     
-                    <!-- New: AWS Outage -->
+                    <!-- New: Smishing Triad Campaign that holds over 194,000 Domains -->
                     <div class="threat-item">
                         <div class="threat-indicator high"></div>
                         <div class="threat-content">
-                            <div class="threat-title">Amazon Slowly Recovering After Global AWS Outage</div>
-                            <div class="threat-meta">Outage from an internal server within the cloud service brings down AWS for 9 hours until it was fixed</div>
+                            <div class="threat-title">Chinese-Speaking Threat Actor Smishing Triad Launches Campaign That Leverages Over 194,000 Domains</div>
+                            <div class="threat-meta">The Smishing Triad campaign are highly decentralized phishing-as-a-service (Phaas) attacks that were used to collect sensitive information, including Social Security numbers</div>
                             <div class="threat-footer">
                                 <div class="threat-tags">
-                                    <span class="tag tag-sector">AWS</span>
-                                    <span class="tag tag-technique">DNS</span>
+                                    <span class="tag tag-sector">Government</span>
+                                    <span class="tag tag-phishing">PhaaS</span>
+                                    <span class="tag tag-apt">Smishing Triad</span>
                                 </div>
-                                <div class="threat-time">Oct 20</div>
+                                <div class="threat-time">Oct 28</div>
                             </div>
                         </div>
                     </div>
